// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListEventItem receive matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-width-13qz1uu"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitBoxPack": "center",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitJustifyContent": "center",
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "justifyContent": "center",
        "maxHeight": "100%",
        "msFlexAlign": "center",
        "msFlexDirection": "row",
        "msFlexPack": "center",
        "msFlexPositive": 1,
        "paddingBottom": "8px",
        "paddingLeft": "8px",
        "paddingRight": "8px",
        "paddingTop": "8px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "width": "34px",
        }
      }
    />
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxFlex": 1,
          "WebkitFlexGrow": 1,
          "WebkitFlexShrink": 1,
          "flexGrow": 1,
          "flexShrink": 1,
          "marginLeft": "8px",
          "msFlexNegative": 1,
          "msFlexPositive": 1,
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "justify",
            "WebkitFlexDirection": "row",
            "WebkitFlexShrink": 1,
            "WebkitJustifyContent": "space-between",
            "alignItems": "center",
            "borderBottomColor": "rgba(0,187,165,1.00)",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "2px",
            "display": "flex",
            "flexDirection": "row",
            "flexShrink": 1,
            "justifyContent": "space-between",
            "msFlexAlign": "center",
            "msFlexDirection": "row",
            "msFlexNegative": 1,
            "msFlexPack": "justify",
            "paddingBottom": "5px",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(163,163,163,1.00)",
              "fontFamily": "Roboto",
              "fontSize": "10px",
              "fontWeight": "normal",
              "lineHeight": "17px",
              "textAlign": "center",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          04/01/19 15:03
        </div>
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(0,187,165,1.00)",
              "fontFamily": "Roboto",
              "fontSize": "15px",
              "fontWeight": "700",
              "lineHeight": "18px",
              "marginLeft": "auto",
              "textAlign": "center",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          +
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "baseline",
              "WebkitBoxAlign": "baseline",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexDirection": "row",
              "alignItems": "baseline",
              "display": "flex",
              "flexDirection": "row",
              "msFlexAlign": "baseline",
              "msFlexDirection": "row",
            }
          }
        >
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(0,187,165,1.00)",
                "fontFamily": "Roboto Slab",
                "fontSize": "20px",
                "fontWeight": "700",
                "lineHeight": "18px",
                "marginRight": "4px",
                "textAlign": "right",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            0.04
          </div>
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(66,69,74,1.00)",
                "fontFamily": "Roboto",
                "fontSize": "16px",
                "fontWeight": "normal",
                "lineHeight": "16px",
                "textAlign": "center",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(0,187,165,1.00)",
                  "fontFamily": "Roboto Slab",
                  "fontSize": "10px",
                  "fontWeight": "700",
                  "lineHeight": "11px",
                  "textAlign": "right",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              G
            </span>
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(0,187,165,1.00)",
                  "fontFamily": "Roboto Slab",
                  "fontSize": "9.5px",
                  "fontWeight": "700",
                  "lineHeight": "11px",
                  "textAlign": "right",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              $
            </span>
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "flex-start",
            "WebkitBoxAlign": "start",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "center",
            "WebkitFlexDirection": "row",
            "WebkitFlexShrink": 1,
            "WebkitJustifyContent": "center",
            "alignItems": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexShrink": 1,
            "height": "45px",
            "justifyContent": "center",
            "msFlexAlign": "start",
            "msFlexDirection": "row",
            "msFlexNegative": 1,
            "msFlexPack": "center",
            "position": "relative",
          }
        }
      >
        <div
          aria-disabled={true}
          className="css-view-1dbjc4n r-position-u8s1d r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          disabled={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "WebkitAlignSelf": "flex-start",
              "alignSelf": "flex-start",
              "backgroundColor": "rgba(203,203,203,1.00)",
              "borderBottomColor": "rgba(163,163,163,1.00)",
              "borderBottomLeftRadius": "17px",
              "borderBottomRightRadius": "17px",
              "borderBottomWidth": "1px",
              "borderLeftColor": "rgba(163,163,163,1.00)",
              "borderLeftWidth": "1px",
              "borderRightColor": "rgba(163,163,163,1.00)",
              "borderRightWidth": "1px",
              "borderTopColor": "rgba(163,163,163,1.00)",
              "borderTopLeftRadius": "17px",
              "borderTopRightRadius": "17px",
              "borderTopWidth": "1px",
              "height": "34px",
              "left": "-41px",
              "marginTop": "8px",
              "msFlexItemAlign": "start",
              "width": "34px",
            }
          }
        >
          <div
            className="css-view-1dbjc4n r-backgroundColor-1niwhzg"
            style={
              Object {
                "borderBottomLeftRadius": "16px",
                "borderBottomRightRadius": "16px",
                "borderTopLeftRadius": "16px",
                "borderTopRightRadius": "16px",
                "height": "32px",
                "width": "32px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style={
                Object {
                  "borderBottomLeftRadius": "16px",
                  "borderBottomRightRadius": "16px",
                  "borderTopLeftRadius": "16px",
                  "borderTopRightRadius": "16px",
                  "height": "32px",
                  "width": "32px",
                }
              }
            >
              <div
                className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
                style={
                  Object {
                    "backgroundImage": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII=\\")",
                  }
                }
              />
              <img
                alt=""
                className="css-accessibilityImage-9pa8cd"
                draggable={false}
                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII="
              />
            </div>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "flex-start",
              "WebkitBoxAlign": "start",
              "WebkitBoxDirection": "normal",
              "WebkitBoxFlex": 1,
              "WebkitBoxOrient": "vertical",
              "WebkitBoxPack": "end",
              "WebkitFlexDirection": "column",
              "WebkitFlexGrow": 1,
              "WebkitFlexShrink": 1,
              "WebkitJustifyContent": "flex-end",
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "flex-end",
              "marginBottom": "0px",
              "marginRight": "8px",
              "marginTop": "0px",
              "msFlexAlign": "start",
              "msFlexDirection": "column",
              "msFlexNegative": 1,
              "msFlexPack": "end",
              "msFlexPositive": 1,
            }
          }
        >
          <div
            className="css-text-901oao css-textMultiLine-cens5h"
            dir="auto"
            style={
              Object {
                "WebkitAlignItems": "flex-end",
                "WebkitBoxAlign": "end",
                "WebkitFlexShrink": 0,
                "WebkitLineClamp": 2,
                "alignItems": "flex-end",
                "color": "rgba(66,69,74,1.00)",
                "display": "flex",
                "flexShrink": 0,
                "fontFamily": "Roboto",
                "fontSize": "16px",
                "fontWeight": "normal",
                "height": "20px",
                "lineHeight": "22px",
                "marginTop": "6px",
                "msFlexAlign": "end",
                "msFlexNegative": 0,
                "textAlign": "left",
                "textDecoration": "none",
                "textTransform": "capitalize",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(66,69,74,1.00)",
                  "fontFamily": "Roboto",
                  "fontSize": "10px",
                  "fontWeight": "normal",
                  "lineHeight": "14px",
                  "marginRight": "3px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              From: 
            </span>
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(66,69,74,1.00)",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": "500",
                  "lineHeight": "19px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              Misao Matimbo
            </span>
          </div>
          <div
            className="css-text-901oao css-textOneLine-bfa6kz"
            dir="auto"
            style={
              Object {
                "WebkitFlexShrink": 0,
                "color": "rgba(163,163,163,1.00)",
                "flexShrink": 0,
                "fontFamily": "Roboto",
                "fontSize": "10px",
                "fontWeight": "normal",
                "lineHeight": "14px",
                "msFlexNegative": 0,
                "paddingBottom": "0px",
                "textAlign": "center",
                "textDecoration": "none",
                "textTransform": "capitalize",
              }
            }
          >
            aaa
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignSelf": "flex-start",
              "alignSelf": "flex-start",
              "height": "35px",
              "marginTop": "8px",
              "msFlexItemAlign": "start",
              "width": "35px",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ListEventItem send matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-width-13qz1uu"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitBoxPack": "center",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitJustifyContent": "center",
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "justifyContent": "center",
        "maxHeight": "100%",
        "msFlexAlign": "center",
        "msFlexDirection": "row",
        "msFlexPack": "center",
        "msFlexPositive": 1,
        "paddingBottom": "8px",
        "paddingLeft": "8px",
        "paddingRight": "8px",
        "paddingTop": "8px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "width": "34px",
        }
      }
    />
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxFlex": 1,
          "WebkitFlexGrow": 1,
          "WebkitFlexShrink": 1,
          "flexGrow": 1,
          "flexShrink": 1,
          "marginLeft": "8px",
          "msFlexNegative": 1,
          "msFlexPositive": 1,
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "justify",
            "WebkitFlexDirection": "row",
            "WebkitFlexShrink": 1,
            "WebkitJustifyContent": "space-between",
            "alignItems": "center",
            "borderBottomColor": "rgba(250,108,119,1.00)",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "2px",
            "display": "flex",
            "flexDirection": "row",
            "flexShrink": 1,
            "justifyContent": "space-between",
            "msFlexAlign": "center",
            "msFlexDirection": "row",
            "msFlexNegative": 1,
            "msFlexPack": "justify",
            "paddingBottom": "5px",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(163,163,163,1.00)",
              "fontFamily": "Roboto",
              "fontSize": "10px",
              "fontWeight": "normal",
              "lineHeight": "17px",
              "textAlign": "center",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          04/01/19 15:03
        </div>
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(250,108,119,1.00)",
              "fontFamily": "Roboto",
              "fontSize": "15px",
              "fontWeight": "700",
              "lineHeight": "18px",
              "marginLeft": "auto",
              "textAlign": "center",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          -
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "baseline",
              "WebkitBoxAlign": "baseline",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexDirection": "row",
              "alignItems": "baseline",
              "display": "flex",
              "flexDirection": "row",
              "msFlexAlign": "baseline",
              "msFlexDirection": "row",
            }
          }
        >
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(250,108,119,1.00)",
                "fontFamily": "Roboto Slab",
                "fontSize": "20px",
                "fontWeight": "700",
                "lineHeight": "18px",
                "marginRight": "4px",
                "textAlign": "right",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            0.04
          </div>
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(66,69,74,1.00)",
                "fontFamily": "Roboto",
                "fontSize": "16px",
                "fontWeight": "normal",
                "lineHeight": "16px",
                "textAlign": "center",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(250,108,119,1.00)",
                  "fontFamily": "Roboto Slab",
                  "fontSize": "10px",
                  "fontWeight": "700",
                  "lineHeight": "11px",
                  "textAlign": "right",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              G
            </span>
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(250,108,119,1.00)",
                  "fontFamily": "Roboto Slab",
                  "fontSize": "9.5px",
                  "fontWeight": "700",
                  "lineHeight": "11px",
                  "textAlign": "right",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              $
            </span>
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "flex-start",
            "WebkitBoxAlign": "start",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "center",
            "WebkitFlexDirection": "row",
            "WebkitFlexShrink": 1,
            "WebkitJustifyContent": "center",
            "alignItems": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexShrink": 1,
            "height": "45px",
            "justifyContent": "center",
            "msFlexAlign": "start",
            "msFlexDirection": "row",
            "msFlexNegative": 1,
            "msFlexPack": "center",
            "position": "relative",
          }
        }
      >
        <div
          aria-disabled={true}
          className="css-view-1dbjc4n r-position-u8s1d r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          disabled={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "WebkitAlignSelf": "flex-start",
              "alignSelf": "flex-start",
              "backgroundColor": "rgba(203,203,203,1.00)",
              "borderBottomColor": "rgba(163,163,163,1.00)",
              "borderBottomLeftRadius": "17px",
              "borderBottomRightRadius": "17px",
              "borderBottomWidth": "1px",
              "borderLeftColor": "rgba(163,163,163,1.00)",
              "borderLeftWidth": "1px",
              "borderRightColor": "rgba(163,163,163,1.00)",
              "borderRightWidth": "1px",
              "borderTopColor": "rgba(163,163,163,1.00)",
              "borderTopLeftRadius": "17px",
              "borderTopRightRadius": "17px",
              "borderTopWidth": "1px",
              "height": "34px",
              "left": "-41px",
              "marginTop": "8px",
              "msFlexItemAlign": "start",
              "width": "34px",
            }
          }
        >
          <div
            className="css-view-1dbjc4n r-backgroundColor-1niwhzg"
            style={
              Object {
                "borderBottomLeftRadius": "16px",
                "borderBottomRightRadius": "16px",
                "borderTopLeftRadius": "16px",
                "borderTopRightRadius": "16px",
                "height": "32px",
                "width": "32px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style={
                Object {
                  "borderBottomLeftRadius": "16px",
                  "borderBottomRightRadius": "16px",
                  "borderTopLeftRadius": "16px",
                  "borderTopRightRadius": "16px",
                  "height": "32px",
                  "width": "32px",
                }
              }
            >
              <div
                className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
                style={
                  Object {
                    "backgroundImage": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII=\\")",
                  }
                }
              />
              <img
                alt=""
                className="css-accessibilityImage-9pa8cd"
                draggable={false}
                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII="
              />
            </div>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "flex-start",
              "WebkitBoxAlign": "start",
              "WebkitBoxDirection": "normal",
              "WebkitBoxFlex": 1,
              "WebkitBoxOrient": "vertical",
              "WebkitBoxPack": "end",
              "WebkitFlexDirection": "column",
              "WebkitFlexGrow": 1,
              "WebkitFlexShrink": 1,
              "WebkitJustifyContent": "flex-end",
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "flex-end",
              "marginBottom": "0px",
              "marginRight": "8px",
              "marginTop": "0px",
              "msFlexAlign": "start",
              "msFlexDirection": "column",
              "msFlexNegative": 1,
              "msFlexPack": "end",
              "msFlexPositive": 1,
            }
          }
        >
          <div
            className="css-text-901oao css-textMultiLine-cens5h"
            dir="auto"
            style={
              Object {
                "WebkitAlignItems": "flex-end",
                "WebkitBoxAlign": "end",
                "WebkitFlexShrink": 0,
                "WebkitLineClamp": 2,
                "alignItems": "flex-end",
                "color": "rgba(66,69,74,1.00)",
                "display": "flex",
                "flexShrink": 0,
                "fontFamily": "Roboto",
                "fontSize": "16px",
                "fontWeight": "normal",
                "height": "20px",
                "lineHeight": "22px",
                "marginTop": "6px",
                "msFlexAlign": "end",
                "msFlexNegative": 0,
                "textAlign": "left",
                "textDecoration": "none",
                "textTransform": "capitalize",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(66,69,74,1.00)",
                  "fontFamily": "Roboto",
                  "fontSize": "10px",
                  "fontWeight": "normal",
                  "lineHeight": "14px",
                  "marginRight": "3px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              To: 
            </span>
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(66,69,74,1.00)",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": "500",
                  "lineHeight": "19px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              Misao Matimbo
            </span>
          </div>
          <div
            className="css-text-901oao css-textOneLine-bfa6kz"
            dir="auto"
            style={
              Object {
                "WebkitFlexShrink": 0,
                "color": "rgba(163,163,163,1.00)",
                "flexShrink": 0,
                "fontFamily": "Roboto",
                "fontSize": "10px",
                "fontWeight": "normal",
                "lineHeight": "14px",
                "msFlexNegative": 0,
                "paddingBottom": "0px",
                "textAlign": "center",
                "textDecoration": "none",
                "textTransform": "capitalize",
              }
            }
          >
            aaa
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignSelf": "flex-start",
              "alignSelf": "flex-start",
              "height": "35px",
              "marginTop": "8px",
              "msFlexItemAlign": "start",
              "width": "35px",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ListEventItem withdraw matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-width-13qz1uu"
    style={
      Object {
        "WebkitAlignItems": "center",
        "WebkitBoxAlign": "center",
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitBoxPack": "center",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitJustifyContent": "center",
        "alignItems": "center",
        "flexDirection": "row",
        "flexGrow": 1,
        "justifyContent": "center",
        "maxHeight": "100%",
        "msFlexAlign": "center",
        "msFlexDirection": "row",
        "msFlexPack": "center",
        "msFlexPositive": 1,
        "paddingBottom": "8px",
        "paddingLeft": "8px",
        "paddingRight": "8px",
        "paddingTop": "8px",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "width": "34px",
        }
      }
    />
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxFlex": 1,
          "WebkitFlexGrow": 1,
          "WebkitFlexShrink": 1,
          "flexGrow": 1,
          "flexShrink": 1,
          "marginLeft": "8px",
          "msFlexNegative": 1,
          "msFlexPositive": 1,
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "justify",
            "WebkitFlexDirection": "row",
            "WebkitFlexShrink": 1,
            "WebkitJustifyContent": "space-between",
            "alignItems": "center",
            "borderBottomColor": "rgba(0,195,174,1.00)",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "2px",
            "display": "flex",
            "flexDirection": "row",
            "flexShrink": 1,
            "justifyContent": "space-between",
            "msFlexAlign": "center",
            "msFlexDirection": "row",
            "msFlexNegative": 1,
            "msFlexPack": "justify",
            "paddingBottom": "5px",
          }
        }
      >
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(163,163,163,1.00)",
              "fontFamily": "Roboto",
              "fontSize": "10px",
              "fontWeight": "normal",
              "lineHeight": "17px",
              "textAlign": "center",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          04/01/19 15:03
        </div>
        <div
          className="css-text-901oao"
          dir="auto"
          style={
            Object {
              "color": "rgba(0,195,174,1.00)",
              "fontFamily": "Roboto",
              "fontSize": "15px",
              "fontWeight": "700",
              "lineHeight": "18px",
              "marginLeft": "auto",
              "textAlign": "center",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          +
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "baseline",
              "WebkitBoxAlign": "baseline",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexDirection": "row",
              "alignItems": "baseline",
              "display": "flex",
              "flexDirection": "row",
              "msFlexAlign": "baseline",
              "msFlexDirection": "row",
            }
          }
        >
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(0,195,174,1.00)",
                "fontFamily": "Roboto Slab",
                "fontSize": "20px",
                "fontWeight": "700",
                "lineHeight": "18px",
                "marginRight": "4px",
                "textAlign": "right",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            0.04
          </div>
          <div
            className="css-text-901oao"
            dir="auto"
            style={
              Object {
                "color": "rgba(66,69,74,1.00)",
                "fontFamily": "Roboto",
                "fontSize": "16px",
                "fontWeight": "normal",
                "lineHeight": "16px",
                "textAlign": "center",
                "textDecoration": "none",
                "textTransform": "none",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(0,195,174,1.00)",
                  "fontFamily": "Roboto Slab",
                  "fontSize": "10px",
                  "fontWeight": "700",
                  "lineHeight": "11px",
                  "textAlign": "right",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              G
            </span>
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(0,195,174,1.00)",
                  "fontFamily": "Roboto Slab",
                  "fontSize": "9.5px",
                  "fontWeight": "700",
                  "lineHeight": "11px",
                  "textAlign": "right",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              $
            </span>
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitAlignItems": "flex-start",
            "WebkitBoxAlign": "start",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "center",
            "WebkitFlexDirection": "row",
            "WebkitFlexShrink": 1,
            "WebkitJustifyContent": "center",
            "alignItems": "flex-start",
            "display": "flex",
            "flexDirection": "row",
            "flexShrink": 1,
            "height": "45px",
            "justifyContent": "center",
            "msFlexAlign": "start",
            "msFlexDirection": "row",
            "msFlexNegative": 1,
            "msFlexPack": "center",
            "position": "relative",
          }
        }
      >
        <div
          aria-disabled={true}
          className="css-view-1dbjc4n r-position-u8s1d r-transitionDuration-eafdt9 r-transitionProperty-1i6wzkk r-userSelect-lrvibr"
          disabled={true}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "WebkitAlignSelf": "flex-start",
              "alignSelf": "flex-start",
              "backgroundColor": "rgba(203,203,203,1.00)",
              "borderBottomColor": "rgba(163,163,163,1.00)",
              "borderBottomLeftRadius": "17px",
              "borderBottomRightRadius": "17px",
              "borderBottomWidth": "1px",
              "borderLeftColor": "rgba(163,163,163,1.00)",
              "borderLeftWidth": "1px",
              "borderRightColor": "rgba(163,163,163,1.00)",
              "borderRightWidth": "1px",
              "borderTopColor": "rgba(163,163,163,1.00)",
              "borderTopLeftRadius": "17px",
              "borderTopRightRadius": "17px",
              "borderTopWidth": "1px",
              "height": "34px",
              "left": "-41px",
              "marginTop": "8px",
              "msFlexItemAlign": "start",
              "width": "34px",
            }
          }
        >
          <div
            className="css-view-1dbjc4n r-backgroundColor-1niwhzg"
            style={
              Object {
                "borderBottomLeftRadius": "16px",
                "borderBottomRightRadius": "16px",
                "borderTopLeftRadius": "16px",
                "borderTopRightRadius": "16px",
                "height": "32px",
                "width": "32px",
              }
            }
          >
            <div
              className="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
              style={
                Object {
                  "borderBottomLeftRadius": "16px",
                  "borderBottomRightRadius": "16px",
                  "borderTopLeftRadius": "16px",
                  "borderTopRightRadius": "16px",
                  "height": "32px",
                  "width": "32px",
                }
              }
            >
              <div
                className="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
                style={
                  Object {
                    "backgroundImage": "url(\\"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII=\\")",
                  }
                }
              />
              <img
                alt=""
                className="css-accessibilityImage-9pa8cd"
                draggable={false}
                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACgAAAAkCAIAAAB0Xu9BAAAABGdBTUEAALGPC/xhBQAAAuNJREFUWEetmD1WHDEQhDdxRMYlnBFyBIccgdQhKVcgJeQMpE5JSTd2uqnvIGpVUqmm9TPrffD0eLMzUn+qVnXPwiFd/PP6eLh47v7EaazbmxsOxjhTT88z9hV7GoNF1cUCvN7TTPv/gf/+uQPm862MWTL6fff4HfDx4S79/oVAlAUwqOmYR0rnazuFnhfOy/ErMKkcBFOr1vOjUi2MFn4nuMil6OPh5eGANLhW3y6u3aH7ijEDCxgCvzFmimvc95TekZLyMSeJC68Bkw0kqUy1K87FlpGZqsGFCyqEtQNDdFUtFctTiuhnPKNysid/WFEFLE2O102XJdEE+8IgeuGsjeJyGHm/xHvQ3JtKVsGGp85g9rK6xMHtvHO9+WACYjk5vkVM6XQ6OZubCJvTfPicYPeHO2AKFl5NuF5UK1VDUbeLxh2BcRGKTQE3irHm3+vPj6cfCod50Eqv5QxtwBQUGhZhbrGVuRia1B4MNp6edwBxld2sl1splfHCwfsvCZfrCQyWmX10djjOlWJSSy3VQlS6LmfrgNvaieRWx1LZ6s9co+P0DLsy3OdLU3lWRclQsVcHJBcUQ0k9/WVVrmpRzYQzpgAdQcAXxZzUnFX3proannrYH+Vq6KkLi+UkarH09mC8YPr2RMWOlEqFkQClsykGEv7CqCUbXcG8+SaGvJ4a8d4y6epND+pEhxoN0vWUu5ntXlFb5/JT7JfJJqoTdy9u9qc7ax3xJRHqJLADWEl23cFWl4K9fvoaCJ2BHpmJ3s3z+O0U/DmzdMjB9alWZtg4e3yxzPa7lUR7nkvxLHO9+tvJX3mtSDpwX8GajB283I8R8a7D2MhUZr1iNWdny256yYLd52DwRYBtRMvE7rsmtxIUE+zLKQCDO4jlxB6CZ8M17GhuY+XTE8vNhQiIiSE82ZsGwk1pht4ZSpT0YVpon6EvevOXXH8JxVR78QzNuamupW/7UB7wO/+7sG5V4ekXb4cL5Lyv+4IAAAAASUVORK5CYII="
              />
            </div>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "flex-start",
              "WebkitBoxAlign": "start",
              "WebkitBoxDirection": "normal",
              "WebkitBoxFlex": 1,
              "WebkitBoxOrient": "vertical",
              "WebkitBoxPack": "end",
              "WebkitFlexDirection": "column",
              "WebkitFlexGrow": 1,
              "WebkitFlexShrink": 1,
              "WebkitJustifyContent": "flex-end",
              "alignItems": "flex-start",
              "display": "flex",
              "flexDirection": "column",
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "flex-end",
              "marginBottom": "0px",
              "marginRight": "8px",
              "marginTop": "0px",
              "msFlexAlign": "start",
              "msFlexDirection": "column",
              "msFlexNegative": 1,
              "msFlexPack": "end",
              "msFlexPositive": 1,
            }
          }
        >
          <div
            className="css-text-901oao css-textMultiLine-cens5h"
            dir="auto"
            style={
              Object {
                "WebkitAlignItems": "flex-end",
                "WebkitBoxAlign": "end",
                "WebkitFlexShrink": 0,
                "WebkitLineClamp": 2,
                "alignItems": "flex-end",
                "color": "rgba(66,69,74,1.00)",
                "display": "flex",
                "flexShrink": 0,
                "fontFamily": "Roboto",
                "fontSize": "16px",
                "fontWeight": "normal",
                "height": "20px",
                "lineHeight": "22px",
                "marginTop": "6px",
                "msFlexAlign": "end",
                "msFlexNegative": 0,
                "textAlign": "left",
                "textDecoration": "none",
                "textTransform": "capitalize",
              }
            }
          >
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(66,69,74,1.00)",
                  "fontFamily": "Roboto",
                  "fontSize": "10px",
                  "fontWeight": "normal",
                  "lineHeight": "14px",
                  "marginRight": "3px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              From: 
            </span>
            <span
              className="css-text-901oao css-textHasAncestor-16my406"
              dir="auto"
              style={
                Object {
                  "color": "rgba(66,69,74,1.00)",
                  "fontFamily": "Roboto",
                  "fontSize": "16px",
                  "fontWeight": "500",
                  "lineHeight": "19px",
                  "textAlign": "center",
                  "textDecoration": "none",
                  "textTransform": "none",
                }
              }
            >
              Misao Matimbo
            </span>
          </div>
          <div
            className="css-text-901oao css-textOneLine-bfa6kz"
            dir="auto"
            style={
              Object {
                "WebkitFlexShrink": 0,
                "color": "rgba(163,163,163,1.00)",
                "flexShrink": 0,
                "fontFamily": "Roboto",
                "fontSize": "10px",
                "fontWeight": "normal",
                "lineHeight": "14px",
                "msFlexNegative": 0,
                "paddingBottom": "0px",
                "textAlign": "center",
                "textDecoration": "none",
                "textTransform": "capitalize",
              }
            }
          >
            aaa
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignSelf": "flex-start",
              "alignSelf": "flex-start",
              "height": "35px",
              "marginTop": "8px",
              "msFlexItemAlign": "start",
              "width": "35px",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
